--- a/package.json
+++ b/package.json
@@ -37,6 +37,26 @@
     "e2e": "npm run postinstall:web && ng e2e"
   },
   "dependencies": {
+    "@angular/animations": "^7.1.4",
+    "@ng-bootstrap/ng-bootstrap": "^3.3.1",
+    "ajv": "*",
+    "angular-2-local-storage": "^2.0.0",
+    "angular-font-awesome": "^3.1.2",
+    "bigi": "^1.4.2",
+    "bitcoinjs-lib": "^3.3.1",
+    "bootstrap": "^3.4.0",
+    "ecurve": "^1.0.6",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "kjua": "^0.1.2",
+    "nem-library": "^1.0.5",
+    "nem-sdk": "^1.6.7",
+    "nem-voting": "^2.1.2",
+    "ngx-bootstrap": "^3.1.4",
+    "ngx-toastr": "^9.1.1",
+    "qrcode-generator-es6": "^1.1.4",
+    "url-parse": "^1.4.4",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.6.3",
@@ -51,8 +71,8 @@
     "@angular/platform-browser": "6.1.2",
     "@angular/platform-browser-dynamic": "6.1.2",
     "@angular/router": "6.1.2",
-    "@ngx-translate/core": "10.0.1",
-    "@ngx-translate/http-loader": "3.0.1",
+    "@ngx-translate/core": "^10.0.2",
+    "@ngx-translate/http-loader": "^3.0.1",
     "@types/jasmine": "2.8.7",
     "@types/jasminewd2": "2.0.3",
     "@types/node": "8.9.4",
