--- a/package.json
+++ b/package.json
@@ -37,6 +37,25 @@
     "e2e": "npm run postinstall:web && ng e2e"
   },
   "dependencies": {
+    "@angular/animations": "^7.1.4",
+    "ajv": "*",
+    "angular-2-local-storage": "^2.0.0",
+    "angular-font-awesome": "^3.1.2",
+    "bigi": "^1.4.2",
+    "bitcoinjs-lib": "^3.3.1",
+    "bootstrap": "^3.4.0",
+    "ecurve": "^1.0.6",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "kjua": "^0.1.2",
+    "nem-library": "^1.0.5",
+    "nem-sdk": "^1.6.7",
+    "nem-voting": "^2.1.2",
+    "ngx-bootstrap": "^3.1.4",
+    "ngx-toastr": "^9.1.1",
+    "qrcode-generator-es6": "^1.1.4",
+    "url-parse": "^1.4.4",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.6.3",
